--- a/src/pages/Shop.module.scss
+++ b/src/pages/Shop.module.scss
@@ -17,25 +17,12 @@ $theme-black: #181818;
 .shop__typeBarWrapper{
   flex-grow: 2;
   width: 20%;
-  background: rgba(250, 11, 11, 0.45);
+
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.shop__typeBar{
-  background: rgba(135, 232, 210, 0.45);
-  margin-top: 82px;
-  min-width: 130px;
-}
-
-.shop__typebarItem{
-  background: #754abe;
-}
-
-.shop__typebarItem>div{
-
-}
 .shop__goodsWrapper{
   width: 80%;
   background: rgba(49, 75, 215, 0);
@@ -43,7 +30,7 @@ $theme-black: #181818;
   flex-direction: column;
 }
 
-.shop__filterWrapper{
+.shop__brandBarWrapper{
   background: rgba(74, 171, 93, 0);
   display: flex;
   flex-wrap: wrap;
@@ -51,29 +38,6 @@ $theme-black: #181818;
 
 }
 
-.shop__filterItem{
-  width: 160px;
-  height: 32px;
-  background: $theme-black;
-  color: $text-color;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 15px 0 0 10px;
-  border-radius: 10px;
-  cursor: pointer;
-}
-
-.shop__filterItem>span{
-  font-size: 14px;
-  transition: 0.2s;
-}
-
-.shop__filterItem:hover>span{
-  color: $text-color-hover;
-  transition: 0.2s;
-}
 
 .shop__goodsList{
   background: rgba(126, 88, 88, 0);
