realize device page, fix bugs log/sign

--- a/src/components/Navbar.module.scss
+++ b/src/components/Navbar.module.scss
@@ -46,6 +46,7 @@ $theme-black: #181818;
 }
 
 .navbar__button{
+    text-decoration: none;
     background: $theme-black;
     border: none;
     outline: none;
