--- a/src/components/Loading.module.scss
+++ b/src/components/Loading.module.scss
@@ -1,48 +1,49 @@
+$text-color: white;
+$text-color-hover: #754abe;
+$theme-black: #181818;
+.loaderBackground{
+  width: 100vw;
+  height: 100vh;
+  background: rgba(144, 90, 204, 0.67);
+  position: absolute;
+}
+
 .loader{
   position: absolute;
   left: 50%;
   top: 50%;
 }
 
-.wrapper{
-
-  width: 10vw;
-  height: 10vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.ldsEllipsis {
+.loaderEllipsis {
   width: 80px;
   height: 80px;
 }
-.ldsEllipsis div {
+.loaderEllipsis div {
   position: absolute;
   top: 33px;
   width: 13px;
   height: 13px;
   border-radius: 50%;
-  background: #ff2e2e;
+  background: $theme-black;
   animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
-.ldsEllipsis div:nth-child(1) {
+.loaderEllipsis div:nth-child(1) {
   left: 8px;
-  animation: lds-ellipsis1 0.6s infinite;
+  animation: loader-ellipsis1 0.6s infinite;
 }
-.ldsEllipsis div:nth-child(2) {
+.loaderEllipsis div:nth-child(2) {
   left: 8px;
-  animation: lds-ellipsis2 0.6s infinite;
+  animation: loader-ellipsis2 0.6s infinite;
 }
-.ldsEllipsis div:nth-child(3) {
+.loaderEllipsis div:nth-child(3) {
   left: 32px;
-  animation: lds-ellipsis2 0.6s infinite;
+  animation: loader-ellipsis2 0.6s infinite;
 }
-.ldsEllipsis div:nth-child(4) {
+.loaderEllipsis div:nth-child(4) {
   left: 56px;
-  animation: lds-ellipsis3 0.6s infinite;
+  animation: loader-ellipsis3 0.6s infinite;
 }
-@keyframes lds-ellipsis1 {
+@keyframes loader-ellipsis1 {
   0% {
     transform: scale(0);
   }
@@ -50,7 +51,7 @@
     transform: scale(1);
   }
 }
-@keyframes lds-ellipsis3 {
+@keyframes loader-ellipsis3 {
   0% {
     transform: scale(1);
   }
@@ -58,7 +59,7 @@
     transform: scale(0);
   }
 }
-@keyframes lds-ellipsis2 {
+@keyframes loader-ellipsis2 {
   0% {
     transform: translate(0, 0);
   }
