Realize Adding Entities on Admin page, layout, create new route and fix main bugs

--- a/src/components/modals/AdminPopup/styles.module.scss
+++ b/src/components/modals/AdminPopup/styles.module.scss
@@ -15,15 +15,11 @@ $font-large: 35px;
   transition: 1s;
 }
 
-.popupWrapper {
+.popup__wrapper {
+  display: flex;
+  justify-content: center;
   background: #F7F7FA;
   margin: auto;
-  width: 40%;
-  max-height: 500px;
-}
-
-.popup__BtnWrapper {
-  display: flex;
 }
 
 .popup__Btn {
