--- a/src/pages/Admin/styles.module.scss
+++ b/src/pages/Admin/styles.module.scss
@@ -1,3 +1,13 @@
+$text-color: white;
+$text-color-hover: #754abe;
+$theme-black: #181818;
+
 .admin__item {
-  z-index: 1;
+
 }
+
+.admin {
+  height: calc(100vh - 90px);
+  display: flex;
+}
+
