--- a/src/components/modals/AdminPopup/styles.module.scss
+++ b/src/components/modals/AdminPopup/styles.module.scss
@@ -8,10 +8,11 @@ $font-large: 35px;
 
 .popup {
   display: flex;
+  position: fixed;
   background: rgba(0, 0, 0, 0.62);
-  height: calc(100vh - 90px);
+  height: 100vh;
   width: 100vw;
-  margin-top: -165px;
+  margin-top: -90px;
   transition: 1s;
 }
 
