--- a/src/components/modals/CreateDevice/styles.module.scss
+++ b/src/components/modals/CreateDevice/styles.module.scss
@@ -6,6 +6,23 @@ $font-small: 14px;
 $font-medium: 25px;
 $font-large: 35px;
 
+.popup {
+  display: flex;
+  position: fixed;
+  background: rgba(0, 0, 0, 0.62);
+  height: 100vh;
+  width: 100vw;
+  margin-top: -90px;
+  transition: 1s;
+}
+
+.popup__wrapper {
+  display: flex;
+  justify-content: center;
+  background: #F7F7FA;
+  margin: auto;
+}
+
 .createDevice {
   width: 60%;
   min-width: 400px;
@@ -73,7 +90,7 @@ $font-large: 35px;
   transition: 0.2s;
 }
 
-input[type=file]::file-selector-button{
+input[type=file]::file-selector-button {
   border: 2px solid $theme-black;
   width: 160px;
   height: 32px;
@@ -94,7 +111,7 @@ input[type=file]::file-selector-button:hover {
   outline: none;
   background: #F7F7FA;
   color: $theme-black;
-  border: 2px solid  #F7F7FA;
+  border: 2px solid #F7F7FA;
   border-bottom: 0.1em solid $theme-black;
 }
 
