Repairing logic of adding types and brands

--- a/src/components/modals/CreateDevice/styles.module.scss
+++ b/src/components/modals/CreateDevice/styles.module.scss
@@ -134,6 +134,12 @@ $font-large: 35px;
   font-size: 14px;
 }
 
+.test {
+  height: 40px;
+  outline: none;
+  border: 2px solid white;
+}
+
 .createDevice__pictureName {
   display: flex;
   align-items: center;
