--- a/src/components/modals/CreateBrand/styles.module.scss
+++ b/src/components/modals/CreateBrand/styles.module.scss
@@ -12,8 +12,9 @@ $font-large: 35px;
   background: rgba(0, 0, 0, 0.62);
   height: 100vh;
   width: 100vw;
-  margin-top: -90px;
+  margin-top: -230px;
   transition: 1s;
+  z-index: 2;
 }
 
 .popup__wrapper {
