Fixes layout, now button and input in one line

--- a/src/components/modals/CreateEntity/styles.module.scss
+++ b/src/components/modals/CreateEntity/styles.module.scss
@@ -80,6 +80,13 @@ $font-large: 35px;
   align-items: end;
 }
 
+.createDevice__inputButtonWrapper_left {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  height: 30px;
+}
+
 .createDevice__icon {
   display: inherit;
 }
