--- a/src/pages/Shop/styles.module.scss
+++ b/src/pages/Shop/styles.module.scss
@@ -11,7 +11,7 @@ $theme-black: #181818;
   //height: calc(100vh - 90px);
 }
 
-.shop__body {
+.shop__item {
   display: flex;
   height: 100%;
 }
@@ -28,6 +28,7 @@ $theme-black: #181818;
   display: flex;
   flex-direction: column;
   background: rgba(49, 75, 215, 0);
+  margin-top: 50px ;
   width: 80%;
 }
 
