--- a/src/pages/Admin/styles.module.scss
+++ b/src/pages/Admin/styles.module.scss
@@ -21,7 +21,8 @@ $theme-white: #e4e4e7;
   display: flex;
   justify-content: start;
   align-items: flex-start;
-  flex-wrap: wrap;width: 80%;
+  flex-wrap: wrap;
+  width: 80%;
   margin-top: 10px;
 }
 
