--- a/src/components/AdminBody/styles.module.scss
+++ b/src/components/AdminBody/styles.module.scss
@@ -18,20 +18,23 @@ $theme-white: #e4e4e7;
 }
 
 .adminBody__item {
-  width: 200px;
-  height: fit-content;
-  background: $theme-white;
-  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 250px;
+  height: 380px;
+  padding: 10px;
   margin: 10px;
   color: $black-text;
   border-radius: 4px;
+  box-shadow: 0 4px 11px rgba(128, 128, 128, 0.59);
 }
 
 .adminBody__btnWrapper {
   display: flex;
   justify-content: space-around;
-  align-items: center;
   padding: 10px;
+  margin-top: auto;
 }
 
 .adminBody__btn {
@@ -66,4 +69,15 @@ $theme-white: #e4e4e7;
 
 .adminBody__block {
   height: fit-content;
+}
+
+.device__picture {
+  height: 200px;
+  margin-bottom: 15px;
+}
+
+.device__image {
+  width: 100%;
+  height: 100%;
+  object-fit: scale-down;
 }
