--- a/src/components/AdminBody/styles.module.scss
+++ b/src/components/AdminBody/styles.module.scss
@@ -72,12 +72,13 @@ $theme-white: #e4e4e7;
 }
 
 .device__picture {
+  display: flex;
+  justify-content: center;
   height: 200px;
-  margin-bottom: 15px;
+  padding-top: 10px;
 }
 
 .device__image {
-  width: 100%;
   height: 100%;
   object-fit: scale-down;
 }
